LPS-148422 add dateScheduled to Publications schema
